# irregation_system_uni_dubna

./: CMakeLists.txt  main.cpp
actions/: Irrigation.cpp  Irrigation.h
conditions/: Time.cpp  Time.h  Weather.cpp  Weather.h
helpers/: EntitiesHelper.cpp  EntitiesHelper.h  SerializeHelper.h
items/: Item.h
items/payment/: Purchase.cpp  Purchase.h
items/places/: Region.cpp  Region.h
items/users/: Client.cpp  Client.h  CompanyClient.cpp  CompanyClient.h  IndividualClient.cpp  IndividualClient.h
project/: Project.h
